--- a/output/abccare_endog_p_inc21y_spooled_ready.tex
+++ b/output/abccare_endog_p_inc21y_spooled_ready.tex
@@ -8,8 +8,8 @@ Education (30) &         . &         . &         . &         . &   428.717 &    
 Labor Income (21) &         . &         . &         . &         . &    -0.003 &     0.500 &     0.171 &     0.250 \\  
 Cognitive &         . &         . &  3642.984 &     0.045 &         . &         . &  2510.256 &     0.215 \\  
 Non Cognitive &         . &         . &  3614.479 &     0.085 &         . &         . &  6541.107 &     0.010 \\  
-Constant & 17,737.916 &     0.020 & 20,865.068 &     0.030 &  1859.113 &     0.475 & 18,028.070 &     0.320 \\  
-F-stat &     3.570 &         . &     3.542 &         . &     1.897 &         . &     3.248 &         . \\  \\ \midrule
+Constant & 17,737.916 &     0.020 & 20,865.068 &     0.030 &  1859.113 &     0.475 & 18,028.070 &     0.320 \\  \\ \midrule
+F-stat &     3.570 &         . &     3.542 &         . &     1.897 &         . &     3.248 &         . \\  
 R2 &     0.089 &         . &     0.216 &         . &     0.127 &         . &     0.316 &         . \\  
 Observations &    73.000 &         . &    57.000 &         . &    75.000 &         . &    70.000 &         . \\  
 \bottomrule \end{tabular}
