--- a/output/abccare_endog_si30y_inc_labor_spooled_ready.tex
+++ b/output/abccare_endog_si30y_inc_labor_spooled_ready.tex
@@ -8,7 +8,7 @@ Education(30) &         . &         . &         . &         . &  8097.138 &     
 LaborIncome(21) &         . &         . &         . &         . &     0.130 &     0.330 &     0.192 &     0.325 \\  
 Cognitive &         . &         . &  2,308.860 &     0.305 &         . &         . &   785.891 &     0.465 \\  
 NonCognitive &         . &         . &  2,665.092 &     0.190 &         . &         . &  6,876.181 &     0.065 \\  
-Constant &  7,067.552 &     0.405 & 14,188.359 &     0.340 & -73,300.00 &     0.965 & -70,500.00 &     0.920 \\  \midrule
+Constant &  7,067.552 &     0.405 & 14,188.359 &     0.340 & -73,300.00 &     0.965 & -70,500.00 &     0.920 \\ \\  \midrule
 F-stat &     1.965 &         . &     1.522 &         . &     5.746 &         . &     4.742 &         . \\  
 R2 &     0.031 &         . &     0.056 &         . &     0.210 &         . &     0.251 &         . \\  
 Observations &   132.000 &         . &   101.000 &         . &   130.000 &         . &   133.000 &         . \\  
