--- a/output/abccare_endog_si30y_inc_trans_pub_smale.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_smale.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_trans_pub_smale file: abccare_endog_si30y_inc_trans_pub_smale.tex   3 Oct 2016 11:33:19
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 R &  -502.449 &     0.790 &   143.318 &     0.435 &  -107.825 &     0.545 &   127.190 &     0.445 \\  
-Mother'sEducation &    99.292 &     0.255 &    25.500 &     0.475 &   115.258 &     0.360 &   135.300 &     0.390 \\  
-PIAT(5-7) &         . &         . &         . &         . &    -7.882 &     0.665 &     0.340 &     0.495 \\  
-Education(30) &         . &         . &         . &         . &  -170.789 &     0.855 &  -266.323 &     0.845 \\  
-LaborIncome(21) &         . &         . &         . &         . &    -0.037 &     0.830 &    -0.038 &     0.830 \\  
+Mother's Education &    99.292 &     0.255 &    25.500 &     0.475 &   115.258 &     0.360 &   135.300 &     0.390 \\  
+PIAT (5-7) &         . &         . &         . &         . &    -7.882 &     0.665 &     0.340 &     0.495 \\  
+Education (30) &         . &         . &         . &         . &  -170.789 &     0.855 &  -266.323 &     0.845 \\  
+Labor Income (21) &         . &         . &         . &         . &    -0.037 &     0.830 &    -0.038 &     0.830 \\  
 Cognitive &         . &         . &  -314.096 &     0.805 &         . &         . &  -313.968 &     0.655 \\  
-NonCognitive &         . &         . &   171.856 &     0.400 &         . &         . &   221.053 &     0.375 \\  
-Constant &  -290.958 &     0.585 &   124.779 &     0.470 &  2813.461 &     0.220 &  3118.909 &     0.390 \\  
+Non Cognitive &         . &         . &   171.856 &     0.400 &         . &         . &   221.053 &     0.375 \\  
+Constant &  -290.958 &     0.585 &   124.779 &     0.470 &  2813.461 &     0.220 &  3118.909 &     0.390 \\  \midrule
 F-stat &     0.829 &         . &     0.560 &         . &     0.524 &         . &     0.447 &         . \\  
 R2 &     0.037 &         . &     0.092 &         . &     0.115 &         . &     0.205 &         . \\  
 Observations &    66.000 &         . &    49.000 &         . &    65.000 &         . &    63.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
