--- a/output/abccare_endog_si34y_bmi_smale_ready.tex
+++ b/output/abccare_endog_si34y_bmi_smale_ready.tex
@@ -8,7 +8,7 @@ Education (30) &         . &         . &         . &         . &     0.445 &    
 Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.165 &     0.000 &     0.100 \\  
 Cognitive &         . &         . &    -1.677 &     0.800 &         . &         . &    -4.854 &     0.920 \\  
 Non Cognitive &         . &         . &     0.119 &     0.475 &         . &         . &     0.563 &     0.380 \\  
-Constant &    36.443 &     0.000 &    26.285 &     0.030 &     3.330 &     0.455 &   -64.561 &     0.885 \\  \\ \mdirule
+Constant &    36.443 &     0.000 &    26.285 &     0.030 &     3.330 &     0.455 &   -64.561 &     0.885 \\  \\ \midrule
 F-stat &     1.835 &         . &     2.330 &         . &     5.387 &         . &    31.866 &         . \\  
 R2 &     0.076 &         . &     0.180 &         . &     0.230 &         . &     0.504 &         . \\  
 Observations &    37.000 &         . &    25.000 &         . &    35.000 &         . &    35.000 &         . \\  
