--- a/output/abccare_endog_p_inc21y_sfemale_ready.tex
+++ b/output/abccare_endog_p_inc21y_sfemale_ready.tex
@@ -8,8 +8,8 @@ Education (30) &         . &         . &         . &         . &   539.016 &    
 Labor Income (21) &         . &         . &         . &         . &     0.075 &     0.450 &     0.281 &     0.300 \\  
 Cognitive &         . &         . &  7,025.303 &     0.000 &         . &         . &  5,078.749 &     0.170 \\  
 Non Cognitive &         . &         . &  6,134.305 &     0.015 &         . &         . &  8,335.751 &     0.025 \\  
-Constant & 14,995.841 &     0.130 & 19,332.934 &     0.065 & -36,800.00 &     0.855 & 19,264.852 &     0.380 \\  
-F-stat &     2.241 &         . &     5.844 &         . &     4.130 &         . &     7.660 &         . \\  \\ \midrule
+Constant & 14,995.841 &     0.130 & 19,332.934 &     0.065 & -36,800.00 &     0.855 & 19,264.852 &     0.380 \\  \\ \midrule
+F-stat &     2.241 &         . &     5.844 &         . &     4.130 &         . &     7.660 &         . \\  
 R2 &     0.084 &         . &     0.412 &         . &     0.254 &         . &     0.504 &         . \\  
 Observations &    39 &         . &    32 &         . &    40 &         . &    42 &         . \\  
 \bottomrule \end{tabular}
