--- a/output/abccare_endog_p_inc21y_smale_ready.tex
+++ b/output/abccare_endog_p_inc21y_smale_ready.tex
@@ -8,8 +8,8 @@ Education (30) &         . &         . &         . &         . &  -489.183 &    
 Labor Income (21) &         . &         . &         . &         . &    -0.074 &     0.565 &    -0.040 &     0.550 \\  
 Cognitive &         . &         . & -1,394.586 &     0.625 &         . &         . & -10,800.00 &     0.860 \\  
 Non Cognitive &         . &         . & -1,582.930 &     0.650 &         . &         . &   508.814 &     0.440 \\  
-Constant & 23,386.021 &     0.080 & 36,548.277 &     0.110 & 65,366.129 &     0.070 & -449,0000.00 &     0.660 \\  
-F-stat &     3.809 &         . &     3.840 &         . &     7.427 &         . & 12020.329 &         . \\  \\ \midrule
+Constant & 23,386.021 &     0.080 & 36,548.277 &     0.110 & 65,366.129 &     0.070 & -449,0000.00 &     0.660 \\   \\ \midrule
+F-stat &     3.809 &         . &     3.840 &         . &     7.427 &         . & 12020.329 &         . \\ 
 R2 &     0.181 &         . &     0.294 &         . &     0.360 &         . &     0.580 &         . \\  
 Observations &    34.000 &         . &    26.000 &         . &    35.000 &         . &    35.000 &         . \\  
 \bottomrule \end{tabular}
