--- a/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_sfemale.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_trans_pub_sfemale file: abccare_endog_si30y_inc_trans_pub_sfemale.tex   3 Oct 2016 11:34:42
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-R & -2282.845 &     0.960 & -1506.401 &     0.790 & -1265.212 &     0.780 & -1586.668 &     0.775 \\  
-Mother'sEducation &  -439.357 &     0.800 &  -449.456 &     0.740 &  -191.427 &     0.645 &   -35.434 &     0.530 \\  
-PIAT(5-7) &         . &         . &         . &         . &   -84.774 &     0.885 &  -198.713 &     0.885 \\  
-Education(30) &         . &         . &         . &         . &  -217.880 &     0.715 &   -91.087 &     0.585 \\  
-LaborIncome(21) &         . &         . &         . &         . &    -0.131 &     0.945 &    -0.180 &     0.960 \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+R & -2,282.845 &     0.960 & -1,506.401 &     0.790 & -1,265.212 &     0.780 & -1,586.668 &     0.775 \\  
+Mother's Education &  -439.357 &     0.800 &  -449.456 &     0.740 &  -191.427 &     0.645 &   -35.434 &     0.530 \\  
+PIAT (5-7) &         . &         . &         . &         . &   -84.774 &     0.885 &  -198.713 &     0.885 \\  
+Education (30) &         . &         . &         . &         . &  -217.880 &     0.715 &   -91.087 &     0.585 \\  
+Labor Income (21) &         . &         . &         . &         . &    -0.131 &     0.945 &    -0.180 &     0.960 \\  
 Cognitive &         . &         . &  -858.586 &     0.915 &         . &         . &  1301.786 &     0.185 \\  
-NonCognitive &         . &         . &   208.091 &     0.450 &         . &         . &  -579.182 &     0.680 \\  
-Constant &  8904.146 &     0.065 &  8851.117 &     0.080 & 18591.076 &     0.025 & 27403.846 &     0.065 \\  
+Non Cognitive &         . &         . &   208.091 &     0.450 &         . &         . &  -579.182 &     0.680 \\  
+Constant &  8,904.146 &     0.065 &  8,851.117 &     0.080 & 18,591.076 &     0.025 & 27,403.846 &     0.065 \\  \midrule
 F-stat &     2.981 &         . &     2.324 &         . &     3.077 &         . &     2.826 &         . \\  
 R2 &     0.090 &         . &     0.143 &         . &     0.210 &         . &     0.265 &         . \\  
 Observations &    68.000 &         . &    53.000 &         . &    70.000 &         . &    70.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
