--- a/output/abccare_endog_si30y_inc_trans_pub_smale_ready.tex
+++ b/output/abccare_endog_si30y_inc_trans_pub_smale_ready.tex
@@ -1,17 +1,15 @@
-\begin{tabular}{lcccccccccccc} \toprule
- & \multicolumn{2}{c}{(1)}  &  \multicolumn{2}{c}{(2)}  &  \multicolumn{2}{c}{(3)}  &  \multicolumn{2}{c}{(4)}  & \multicolumn{2}{c}{(5)} & \multicolumn{2}{c}{(6)} \\  
- & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
-$R$ &  -502.449 &     0.790 &   143.318 &     0.435 &  -107.825 &     0.545 &   127.190 &     0.445 &  -388.260 &     0.605 &  -497.868 &     0.525 \\  
-Mother's Education &    99.292 &     0.255 &    25.500 &     0.475 &   115.258 &     0.360 &   135.300 &     0.390 &   187.228 &     0.375 &   246.256 &     0.385 \\  
-PIAT (5-7) &         &         &         &         &    -7.882 &     0.665 &     0.340 &     0.495 &    -2.678 &     0.520 &   107.088 &     0.370 \\  
-Education (30) &         &         &         &         &  -170.789 &     0.855 &  -266.323 &     0.845 &   -71.548 &     0.680 &  1189.564 &     0.370 \\  
-Labor Income (21) &         &         &         &         &    -0.037 &     0.830 &    -0.038 &     0.830 &    -0.080 &     0.840 &    -0.029 &     0.595 \\  
-BMI (34) &         &         &         &         &         &         &         &         &    21.438 &     0.445 &  -132.117 &     0.675 \\  
-Cognitive &         &         &  -314.096 &     0.805 &         &         &  -313.968 &     0.655 &         &         & -1200.645 &     0.685 \\  
-Non-cognitive &         &         &   171.856 &     0.400 &         &         &   221.053 &     0.375 &         &         &   266.932 &     0.430 \\  
-Constant &  -290.958 &     0.585 &   124.779 &     0.470 &  2813.461 &     0.220 &  3118.909 &     0.390 &   709.374 &     0.485 & -21700 &     0.665 \\  \midrule
-$F$-stat &     0.829 &         &     0.560 &         &     0.524 &         &     0.447 &         &     0.590 &         &     5.783 &         \\  
-$R^2$ &     0.037 &         &     0.092 &         &     0.115 &         &     0.205 &         &     0.253 &         &     0.453 &         \\  
-Observations &    66 &         &    49 &         &    54 &         &    43 &         &    31 &         &    22 &         \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+R &  -502.449 &     0.790 &   143.318 &     0.435 &  -107.825 &     0.545 &   127.190 &     0.445 \\  
+Mother's Education &    99.292 &     0.255 &    25.500 &     0.475 &   115.258 &     0.360 &   135.300 &     0.390 \\  
+PIAT (5-7) &         . &         . &         . &         . &    -7.882 &     0.665 &     0.340 &     0.495 \\  
+Education (30) &         . &         . &         . &         . &  -170.789 &     0.855 &  -266.323 &     0.845 \\  
+Labor Income (21) &         . &         . &         . &         . &    -0.037 &     0.830 &    -0.038 &     0.830 \\  
+Cognitive &         . &         . &  -314.096 &     0.805 &         . &         . &  -313.968 &     0.655 \\  
+Non Cognitive &         . &         . &   171.856 &     0.400 &         . &         . &   221.053 &     0.375 \\  
+Constant &  -290.958 &     0.585 &   124.779 &     0.470 &  2813.461 &     0.220 &  3118.909 &     0.390 \\ \\  \midrule
+F-stat &     0.829 &         . &     0.560 &         . &     0.524 &         . &     0.447 &         . \\  
+R2 &     0.037 &         . &     0.092 &         . &     0.115 &         . &     0.205 &         . \\  
+Observations &    66.000 &         . &    49.000 &         . &    65.000 &         . &    63.000 &         . \\  
 \bottomrule \end{tabular}
-
