include health outcomes

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -580,7 +580,6 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Prediction of Transfer Income at Age 30 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, ABC/CARE}
-\label{table:end3}
 \centering
 \scriptsize
 \input{output/abccare_endog_si30y_inc_trans_pub_smale_ready.tex}
@@ -594,7 +593,6 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Prediction of Body-Mass Index at Age 34 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, ABC/CARE}
-\label{table:end3}
 \centering
 \scriptsize
 \input{output/abccare_endog_si34y_bmi_spooled_ready.tex}
@@ -608,7 +606,6 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Prediction of Body-Mass Index at Age 34 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, ABC/CARE}
-\label{table:end3}
 \centering
 \scriptsize
 \input{output/abccare_endog_si34y_bmi_sfemale_ready.tex}
@@ -644,7 +641,7 @@ We complement this more direct evidence using data from another randomized contr
 \label{table:perry1}
 \centering
 \scriptsize
-\input{output/perry_endog_hs40_ready.tex}
+\input{output/perry_endog_hs40_spooled_ready.tex}
 \begin{tablenotes}
 \footnotesize
 \item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
@@ -687,7 +684,7 @@ We complement this more direct evidence using data from another randomized contr
 \label{table:perry2}
 \centering
 \scriptsize
-\input{output/perry_endog_idle40_ready.tex}
+\input{output/perry_endog_idle40_spooled_ready.tex}
 \begin{tablenotes}
 \footnotesize
 \item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
@@ -729,7 +726,7 @@ We complement this more direct evidence using data from another randomized contr
 \label{table:perry3}
 \centering
 \scriptsize
-\input{output/perry_endog_inc40_ready.tex}
+\input{output/perry_endog_inc40_spooled_ready.tex}
 \begin{tablenotes}
 \footnotesize
 \item Note: Prediction of high school graduation at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
@@ -765,6 +762,47 @@ We complement this more direct evidence using data from another randomized contr
 \end{threeparttable}
 \end{sidewaystable}
 
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Reports Very Good Health at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Pooled Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_healthy40_spooled_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of reports very good health at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Reports Very Good Health at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Females Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_healthy40_sfemale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of reports very good health at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\begin{sidewaystable}[H]
+\begin{threeparttable}
+\caption{Prediction of Reports Very Good Health at Age 40 Accounting for $R, \bm{B}, \bm{\theta},$ and $\bm{X}_{t}$ Males Sample, Perry Preschool Project}
+\label{table:perry3}
+\centering
+\scriptsize
+\input{output/perry_endog_healthy40_smale_ready.tex}
+\begin{tablenotes}
+\footnotesize
+\item Note: Prediction of reports very good health at age 40 based on the variables listed in the row. Empty cells indicate that the variable was not used in the prediction. For each coefficient we provide point estimate and $p$-value. Cognitive, Externalizing, and Academic are factor scores estimated based on a system as the one in \eqref{eq:msystem} and using the measures of cognitive skills, externalizing behavior, and academic motivation between ages 6 and 9 used in \citet{Heckman_Pinto_etal_2013_PerryFactor}. Inference is based on the empirical bootstrap distribution. If the estimates for the constant terms are in the ten or hundred thousands, we report a figure that has been rounded to the thousands.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
 
 \subsection{Testing  Assumption~\ref{ass:corns}} \label{app:endogeneity}
 
