reformatted updated abccare tables

--- a/output/abccare_endog_si30y_inc_labor_sfemale_ready.tex
+++ b/output/abccare_endog_si30y_inc_labor_sfemale_ready.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &  3,401.892 &     0.305 &  1,194.706 &     0.410 & -6,899.006 &     0.915 & -5,862.320 &     0.840 \\  
+$R$ &  3,401.892 &     0.305 &  1,194.706 &     0.410 & -6,899.006 &     0.915 & -5,862.320 &     0.840 \\  
 Mother's Education &  -852.061 &     0.675 & -1,688.467 &     0.835 & -2,581.049 &     0.975 & -2,473.902 &     0.965 \\  
-PIAT (5-7) &         . &         . &         . &         . &   260.764 &     0.165 &   347.907 &     0.170 \\  
-Education (30) &         . &         . &         . &         . &  3,580.642 &     0.000 &  3,916.084 &     0.005 \\  
-LaborIncome (21) &         . &         . &         . &         . &     0.329 &     0.175 &     0.392 &     0.160 \\  
-Cognitive &         . &         . &  3,828.286 &     0.130 &         . &         . & -2,905.637 &     0.785 \\  
-Non Cognitive &         . &         . & -1,663.392 &     0.655 &         . &         . &  2,051.882 &     0.300 \\  
+PIAT (5-7) &         &         &         &         &   260.764 &     0.165 &   347.907 &     0.170 \\  
+Education (30) &         &         &         &         &  3,580.642 &     0.000 &  3,916.084 &     0.005 \\  
+LaborIncome (21) &         &         &         &         &     0.329 &     0.175 &     0.392 &     0.160 \\  
+Cognitive &         &         &  3,828.286 &     0.130 &         &         & -2,905.637 &     0.785 \\  
+Non Cognitive &         &         & -1,663.392 &     0.655 &         &         &  2,051.882 &     0.300 \\  
 Constant & 32,117.510 &     0.055 & 39,943.031 &     0.025 & -21,500.00 &     0.800 & -36,600.00 &     0.840 \\  \\ \midrule
-F-stat &     1.234 &         . &     2.812 &         . &     9.052 &         . &     8.916 &         . \\  
-R2 &     0.039 &         . &     0.143 &         . &     0.354 &         . &     0.393 &         . \\  
-Observations &    67.000 &         . &    52.000 &         . &    65.000 &         . &    70.000 &         . \\  
+$F$-stat &     1.234 &         &     2.812 &         &     9.052 &         &     8.916 &         \\  
+$R^2$ &     0.039 &         &     0.143 &         &     0.354 &         &     0.393 &         \\  
+Observations &    67 &         &    52 &         &    65 &         &    70 &         \\  
 \bottomrule \end{tabular}
