--- a/output/abccare_endog_si34y_bmi_smale_ready.tex
+++ b/output/abccare_endog_si34y_bmi_smale_ready.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &    -0.189 &     0.510 &     1.262 &     0.370 &    -0.397 &     0.545 &     1.150 &     0.400 \\  
+$R$ &    -0.189 &     0.510 &     1.262 &     0.370 &    -0.397 &     0.545 &     1.150 &     0.400 \\  
 Mother's Education &    -0.513 &     0.805 &     0.448 &     0.380 &    -0.091 &     0.510 &     1.074 &     0.215 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.224 &     0.050 &     0.651 &     0.075 \\  
-Education (30) &         . &         . &         . &         . &     0.445 &     0.250 &     1.482 &     0.220 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.165 &     0.000 &     0.100 \\  
-Cognitive &         . &         . &    -1.677 &     0.800 &         . &         . &    -4.854 &     0.920 \\  
-Non Cognitive &         . &         . &     0.119 &     0.475 &         . &         . &     0.563 &     0.380 \\  
+PIAT (5-7) &         &         &         &         &     0.224 &     0.050 &     0.651 &     0.075 \\  
+Education (30) &         &         &         &         &     0.445 &     0.250 &     1.482 &     0.220 \\  
+Labor Income (21) &         &         &         &         &     0.000 &     0.165 &     0.000 &     0.100 \\  
+Cognitive &         &         &    -1.677 &     0.800 &         &         &    -4.854 &     0.920 \\  
+Non Cognitive &         &         &     0.119 &     0.475 &         &         &     0.563 &     0.380 \\  
 Constant &    36.443 &     0.000 &    26.285 &     0.030 &     3.330 &     0.455 &   -64.561 &     0.885 \\  \\ \midrule
-F-stat &     1.835 &         . &     2.330 &         . &     5.387 &         . &    31.866 &         . \\  
-R2 &     0.076 &         . &     0.180 &         . &     0.230 &         . &     0.504 &         . \\  
-Observations &    37.000 &         . &    25.000 &         . &    35.000 &         . &    35.000 &         . \\  
+$F$-stat &     1.835 &         &     2.330 &         &     5.387 &         &    31.866 &         \\  
+$R^2$ &     0.076 &         &     0.180 &         &     0.230 &         &     0.504 &         \\  
+Observations &    37 &         &    25 &         &    35 &         &    35 &         \\  
 \bottomrule \end{tabular}
