--- a/output/abccare_endog_si34y_bmi_spooled_ready.tex
+++ b/output/abccare_endog_si34y_bmi_spooled_ready.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-R &     1.027 &     0.270 &     2.864 &     0.150 &     1.213 &     0.250 &     3.367 &     0.090 \\  
+$R$ &     1.027 &     0.270 &     2.864 &     0.150 &     1.213 &     0.250 &     3.367 &     0.090 \\  
 Mother's Education &    -0.130 &     0.615 &    -0.116 &     0.560 &     0.003 &     0.500 &    -0.273 &     0.665 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.076 &     0.260 &     0.277 &     0.060 \\  
-Education (30) &         . &         . &         . &         . &    -0.116 &     0.575 &    -0.295 &     0.610 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.290 &     0.000 &     0.095 \\  
-Cognitive &         . &         . &    -1.675 &     0.935 &         . &         . &    -3.431 &     0.960 \\  
-Non Cognitive &         . &         . &     1.615 &     0.195 &         . &         . &     2.392 &     0.100 \\  
+PIAT (5-7) &         &         &         &         &     0.076 &     0.260 &     0.277 &     0.060 \\  
+Education (30) &         &         &         &         &    -0.116 &     0.575 &    -0.295 &     0.610 \\  
+Labor Income (21) &         &         &         &         &     0.000 &     0.290 &     0.000 &     0.095 \\  
+Cognitive &         &         &    -1.675 &     0.935 &         &         &    -3.431 &     0.960 \\  
+Non Cognitive &         &         &     1.615 &     0.195 &         &         &     2.392 &     0.100 \\  
 Constant &    34.913 &     0.000 &    33.909 &     0.000 &    26.682 &     0.070 &     9.604 &     0.330 \\  \\ \midrule
-F-stat &     1.366 &         . &     2.612 &         . &     1.663 &         . &     2.830 &         . \\  
-R2 &     0.027 &         . &     0.110 &         . &     0.090 &         . &     0.209 &         . \\  
-Observations &    87.000 &         . &    66.000 &         . &    85.000 &         . &    84.000 &         . \\  
+$F$-stat &     1.366 &         &     2.612 &         &     1.663 &         &     2.830 &         \\  
+$R^2$ &     0.027 &         &     0.110 &         &     0.090 &         &     0.209 &         \\  
+Observations &    87 &         &    66 &         &    85 &         &    84 &         \\  
 \bottomrule \end{tabular}
