fixed tables more and corrected error

--- a/output/perry_endog_healthy40_sfemale_ready.tex
+++ b/output/perry_endog_healthy40_sfemale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &    -0.000 &     0.60
 Cognitive &         &         &     0.083 &     0.225 &         &         &     0.054 &     0.335 \\  
 Externalizing &         &         &     0.044 &     0.460 &         &         &     0.122 &     0.405 \\  
 Academic &         &         &    -0.017 &     0.520 &         &         &    -0.067 &     0.610 \\  
-Constant &     0.395 &     0.105 &    -0.245 &     0.725 &    -0.565 &     0.665 &    -1.059 &     0.700 \\  \midrule
+Constant &     0.395 &     0.105 &    -0.245 &     0.725 &    -0.565 &     0.665 &    -1.059 &     0.700 \\ \\ \midrule
 $F$-stat &     1.526 &         &     6.997 &         &     3.058 &         &    16.533 &         \\  
 $R^2$ &     0.050 &         &     0.302 &         &     0.160 &         &     0.458 &         \\  
 Observations &    45 &         &    31 &         &    44 &         &    30 &         \\  
