--- a/output/perry_endog_healthy40_smale_ready.tex
+++ b/output/perry_endog_healthy40_smale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &     0.000 &     0.47
 Cognitive &         &         &     0.182 &     0.030 &         &         &     0.099 &     0.260 \\  
 Externalizing &         &         &    -0.046 &     0.575 &         &         &    -0.029 &     0.555 \\  
 Academic &         &         &    -0.047 &     0.530 &         &         &    -0.070 &     0.525 \\  
-Constant &     0.622 &     0.010 &     0.748 &     0.015 &    -0.496 &     0.730 &     0.105 &     0.480 \\  \midrule
+Constant &     0.622 &     0.010 &     0.748 &     0.015 &    -0.496 &     0.730 &     0.105 &     0.480 \\ \\ \midrule
 $F$-stat &     1.114 &         &     4.552 &         &     2.020 &         &     4.028 &         \\  
 $R^2$ &     0.029 &         &     0.204 &         &     0.122 &         &     0.271 &         \\  
 Observations &    67 &         &    48 &         &    61 &         &    43 &         \\  
