--- a/output/perry_endog_healthy40_spooled_ready.tex
+++ b/output/perry_endog_healthy40_spooled_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &     0.000 &     0.26
 Cognitive &         &         &     0.154 &     0.005 &         &         &     0.114 &     0.070 \\  
 Externalizing &         &         &    -0.089 &     0.690 &         &         &    -0.081 &     0.655 \\  
 Academic &         &         &     0.023 &     0.440 &         &         &     0.025 &     0.435 \\  
-Constant &     0.528 &     0.005 &     0.440 &     0.075 &    -0.274 &     0.675 &     0.292 &     0.375 \\  \midrule
+Constant &     0.528 &     0.005 &     0.440 &     0.075 &    -0.274 &     0.675 &     0.292 &     0.375 \\ \\ \midrule
 $F$-stat &     1.310 &         &     4.299 &         &     2.264 &         &     3.851 &         \\  
 $R^2$ &     0.021 &         &     0.144 &         &     0.079 &         &     0.194 &         \\  
 Observations &   112 &         &    78 &         &   104 &         &    71 &         \\  
