--- a/output/perry_endog_hs40_sfemale_ready.tex
+++ b/output/perry_endog_hs40_sfemale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &    -0.000 &     0.50
 Cognitive &         &         &     0.050 &     0.260 &         &         &     0.029 &     0.395 \\  
 Externalizing &         &         &    -0.159 &     0.665 &         &         &    -0.109 &     0.590 \\  
 Academic &         &         &     0.044 &     0.430 &         &         &     0.003 &     0.500 \\  
-Constant &     0.168 &     0.295 &     0.629 &     0.110 &    -0.980 &     0.745 &     0.387 &     0.425 \\  \midrule
+Constant &     0.168 &     0.295 &     0.629 &     0.110 &    -0.980 &     0.745 &     0.387 &     0.425 \\ \\  \midrule
 $F$-stat &     4.636 &         &     8.370 &         &     5.812 &         &    14.246 &         \\  
 $R^2$ &     0.146 &         &     0.288 &         &     0.312 &         &     0.473 &         \\  
 Observations &    46 &         &    31 &         &    45 &         &    30 &         \\  
