--- a/output/perry_endog_idle40_sfemale_ready.tex
+++ b/output/perry_endog_idle40_sfemale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &    -0.000 &     0.95
 Cognitive &         &         &    -0.038 &     0.655 &         &         &    -0.076 &     0.780 \\  
 Externalizing &         &         &    -0.107 &     0.610 &         &         &    -0.210 &     0.740 \\  
 Academic &         &         &     0.078 &     0.425 &         &         &     0.118 &     0.370 \\  
-Constant &     0.288 &     0.125 &     0.425 &     0.215 &     0.216 &     0.380 &    -0.988 &     0.770 \\  \midrule
+Constant &     0.288 &     0.125 &     0.425 &     0.215 &     0.216 &     0.380 &    -0.988 &     0.770 \\ \\ \midrule
 $F$-stat &     1.273 &         &     1.881 &         &     1.768 &         &     3.263 &         \\  
 $R^2$ &     0.055 &         &     0.250 &         &     0.192 &         &     0.446 &         \\  
 Observations &    45 &         &    30 &         &    44 &         &    29 &         \\  
