--- a/output/perry_endog_idle40_smale_ready.tex
+++ b/output/perry_endog_idle40_smale_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &    -0.000 &     0.99
 Cognitive &         &         &    -0.005 &     0.515 &         &         &     0.251 &     0.010 \\  
 Externalizing &         &         &     0.021 &     0.475 &         &         &     0.182 &     0.285 \\  
 Academic &         &         &    -0.003 &     0.505 &         &         &    -0.149 &     0.680 \\  
-Constant &     0.423 &     0.065 &     0.416 &     0.100 &     0.950 &     0.095 &     2.847 &     0.015 \\  \midrule
+Constant &     0.423 &     0.065 &     0.416 &     0.100 &     0.950 &     0.095 &     2.847 &     0.015 \\  \\ \midrule
 $F$-stat &     2.781 &         &     3.646 &         &     6.797 &         &     8.777 &         \\  
 $R^2$ &     0.069 &         &     0.170 &         &     0.291 &         &     0.421 &         \\  
 Observations &    66 &         &    47 &         &    60 &         &    42 &         \\  
