--- a/output/perry_endog_hs40_smale_ready.tex
+++ b/output/perry_endog_hs40_smale_ready.tex
@@ -1,18 +1,18 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-$R$ &     0.242 &     0.055 &     0.207 &     0.175 &     0.277 &     0.030 &     0.317 &     0.135 \\  
-Mother's Education &     0.036 &     0.110 &    -0.011 &     0.620 &     0.010 &     0.380 &    -0.006 &     0.520 \\  
-Baseline IQ &         &         &         &         &     0.002 &     0.440 &    -0.004 &     0.595 \\  
-Education (30) &         &         &         &         &     0.095 &     0.060 &     0.043 &     0.365 \\  
-Labor Income (27) &         &         &         &         &    -0.000 &     0.500 &    -0.000 &     0.640 \\  
-Cognitive &         &         &     0.050 &     0.260 &         &         &     0.029 &     0.395 \\  
-Externalizing &         &         &    -0.159 &     0.665 &         &         &    -0.109 &     0.590 \\  
-Academic &         &         &     0.044 &     0.430 &         &         &     0.003 &     0.500 \\  
-Constant &     0.168 &     0.295 &     0.629 &     0.110 &    -0.980 &     0.745 &     0.387 &     0.425 \\  \midrule
-$F$-stat &     4.636 &         &     8.370 &         &     5.812 &         &    14.246 &         \\  
-$R^2$ &     0.146 &         &     0.288 &         &     0.312 &         &     0.473 &         \\  
-Observations &    46 &         &    31 &         &    45 &         &    30 &         \\  
-\bottomrule 
+$R$ &     0.076 &     0.280 &     0.127 &     0.215 &    -0.004 &     0.515 &     0.040 &     0.395 \\  
+Mother's Education &     0.047 &     0.060 &     0.033 &     0.185 &     0.008 &     0.385 &     0.010 &     0.395 \\  
+Baseline IQ &         &         &         &         &    -0.000 &     0.505 &     0.003 &     0.450 \\  
+Education (30) &         &         &         &         &     0.120 &     0.000 &     0.158 &     0.005 \\  
+Labor Income (27) &         &         &         &         &     0.000 &     0.005 &     0.000 &     0.055 \\  
+Cognitive &         &         &     0.136 &     0.080 &         &         &    -0.125 &     0.815 \\  
+Externalizing &         &         &    -0.104 &     0.675 &         &         &     0.183 &     0.370 \\  
+Academic &         &         &     0.092 &     0.340 &         &         &    -0.196 &     0.645 \\  
+Constant &     0.080 &     0.390 &     0.133 &     0.360 &    -1.148 &     0.950 &    -1.882 &     0.915 \\  \\ \midrule
+$F$-stat &     3.100 &         &     6.821 &         &    18.996 &         &    12.834 &         \\  
+$R^2$ &     0.074 &         &     0.215 &         &     0.438 &         &     0.513 &         \\  
+Observations &    66 &         &    47 &         &    59 &         &    41 &         \\  
+\bottomrule
 \end{tabular}
 
