--- a/output/perry_endog_hs40_spooled_ready.tex
+++ b/output/perry_endog_hs40_spooled_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &     0.000 &     0.04
 Cognitive &         &         &     0.117 &     0.025 &         &         &     0.002 &     0.475 \\  
 Externalizing &         &         &    -0.094 &     0.665 &         &         &    -0.009 &     0.510 \\  
 Academic &         &         &     0.078 &     0.290 &         &         &     0.009 &     0.485 \\  
-Constant &     0.133 &     0.270 &     0.349 &     0.100 &    -1.228 &     0.985 &    -1.075 &     0.875 \\  \midrule
+Constant &     0.133 &     0.270 &     0.349 &     0.100 &    -1.228 &     0.985 &    -1.075 &     0.875 \\ \\  \midrule
 $F$-stat &     4.990 &         &     4.834 &         &    11.777 &         &     6.381 &         \\  
 $R^2$ &     0.075 &         &     0.169 &         &     0.307 &         &     0.315 &         \\  
 Observations &   112Ê&         &    78 &         &   105 &         &    72 &         \\  
