--- a/output/perry_endog_idle40_spooled_ready.tex
+++ b/output/perry_endog_idle40_spooled_ready.tex
@@ -9,7 +9,7 @@ Labor Income (27) &         &         &         &         &    -0.000 &     1.00
 Cognitive &         &         &    -0.007 &     0.565 &         &         &     0.098 &     0.095 \\  
 Externalizing &         &         &    -0.046 &     0.575 &         &         &     0.008 &     0.480 \\  
 Academic &         &         &     0.026 &     0.465 &         &         &    -0.020 &     0.565 \\  
-Constant &     0.297 &     0.045 &     0.337 &     0.095 &     0.959 &     0.060 &     1.512 &     0.025 \\  \midrule
+Constant &     0.297 &     0.045 &     0.337 &     0.095 &     0.959 &     0.060 &     1.512 &     0.025 \\ \\ \midrule
 $F$-stat &     1.998 &         &     2.558 &         &     5.409 &         &     3.710 &         \\  
 $R^2$ &     0.032 &         &     0.104 &         &     0.185 &         &     0.250 &         \\  
 Observations &   112 &         &    78 &         &   105 &         &    72 &         \\  
