--- a/output/perry_endog_inc40_sfemale_ready.tex
+++ b/output/perry_endog_inc40_sfemale_ready.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lcccccccc} \toprule
  & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
-$R$ &  1766.253 &     0.410 & -2365.732 &     0.595 &  2185.236 &     0.405 &  2367.960 &     0.420 \\  
-Mother's Education &  2789.810 &     0.010 &  2170.135 &     0.120 &   -69.542 &     0.540 &  -943.695 &     0.705 \\  
+$R$ &  1766.253 &     0.410 & -2,365.732 &     0.595 &  2,185.236 &     0.405 &  2,367.960 &     0.420 \\  
+Mother's Education &  2,789.810 &     0.010 &  2,170.135 &     0.120 &   -69.542 &     0.540 &  -943.695 &     0.705 \\  
 Baseline IQ &         &         &         &         &  -132.444 &     0.595 &  -496.426 &     0.730 \\  
-Education (30) &         &         &         &         &  6436.880 &     0.020 &  9084.893 &     0.060 \\  
+Education (30) &         &         &         &         &  6,436.880 &     0.020 &  9,084.893 &     0.060 \\  
 Labor Income (27) &         &         &         &         &     0.319 &     0.065 &     0.326 &     0.155 \\  
-Cognitive &         &         &  3596.580 &     0.215 &         &         &  1912.709 &     0.320 \\  
-Externalizing &         &         & -29700 &     0.890 &         &         & -1.48e+04 &     0.800 \\  
-Academic &         &         & 17651.066 &     0.185 &         &         &  9261.470 &     0.255 \\  
-Constant & -2546.816 &     0.620 & -1265.775 &     0.555 & -54000 &     0.905 & -52700 &     0.740 \\  \midrule
+Cognitive &         &         &  3,596.580 &     0.215 &         &         &  1,912.709 &     0.320 \\  
+Externalizing &         &         & -29,700 &     0.890 &         &         & -14,800 &     0.800 \\  
+Academic &         &         & 17,651.066 &     0.185 &         &         &  9,261.470 &     0.255 \\  
+Constant & -2,546.816 &     0.620 & -1,265.775 &     0.555 & -54,000 &     0.905 & -52,700 &     0.740 \\  \midrule
 $F$-stat &     3.733 &         &     8.347 &         &     9.544 &         &    28.944 &         \\  
 $R^2$ &     0.106 &         &     0.320 &         &     0.450 &         &     0.618 &         \\  
 Observations &    47 &         &    32 &         &    46 &         &    31 &         \\  
