fixing notations in the description of diagrams

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -94,9 +94,9 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 
 \doublespacing
 
-\noindent \textbf{Details on Figure~\ref{fig:abc-flow}:} Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable $R$ represents randomization into treatment, $[R=1]$, or control, $[R=0]$, groups. After the original randomization, some subjects died or withdrew from the program early in life and were replaced. $R$ also includes those replacements. Arrows pointing outside of the diagram indicate subjects who left the study permanently. The variable $P$ represents participation in the preschool-age program. The variable $SR$ represents randomization into the school-age program, $[SR=1]$, or out of it, $[SR=0]$. Some subjects were not randomized at school age, $[SR=No]$. We use the term ``temporarily attrited" for subjects who did not participate in the study at school age, but were later interviewed in the age-21 followup. \\
+\noindent \textbf{Details on Figure~\ref{fig:abc-flow}:} Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable $R$ represents randomization into treatment, $[R=1]$, or control, $[R=0]$, groups. After the original randomization, some subjects died or withdrew from the program early in life and were replaced. $R$ also includes those replacements. Arrows pointing outside of the diagram indicate subjects who left the study permanently. The variable $D$ represents participation in the preschool-age program. The variable $SR$ represents randomization into the school-age program, $[SR=1]$, or out of it, $[SR=0]$. Some subjects were not randomized at school age, $[SR=No]$. We use the term ``temporarily attrited" for subjects who did not participate in the study at school age, but were later interviewed in the age-21 followup. \\
 
-\noindent \textbf{Details on Figure~\ref{fig:care-flow}:} Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program, and own calculations. Note: The variable $R$ represents randomization into center-based childcare and family education, $[R=2]$, family education, $[R=1]$, or control, $[R=0]$. Arrows pointing outside of the diagram indicate subjects who left the study permanently. The variable $P$ represents participation in the corresponding group of the preschool-age program. The variable $SR$ represents those who participated in the school-age program, $[SR=1]$, or did not, $[SR=0]$. Unlike in ABC, there was no second-phase randomization in CARE. Rather, those in the center-based childcare and family education group and those in the family education group were automatically assigned to receive the school-age treatment. We use the term ``temporarily attrited" for subjects who did not participate in the study at school age, but were later interviewed in the age-21 followup.
+\noindent \textbf{Details on Figure~\ref{fig:care-flow}:} Sources: \cite{Wasik_Ramey_etal_1990_CD}, internal documentation of the program, and own calculations. Note: The variable $R$ represents randomization into center-based childcare and family education, $[R=2]$, family education, $[R=1]$, or control, $[R=0]$. Arrows pointing outside of the diagram indicate subjects who left the study permanently. The variable $D$ represents participation in the corresponding group of the preschool-age program. The variable $SR$ represents those who participated in the school-age program, $[SR=1]$, or did not, $[SR=0]$. Unlike in ABC, there was no second-phase randomization in CARE. Rather, those in the center-based childcare and family education group and those in the family education group were automatically assigned to receive the school-age treatment. We use the term ``temporarily attrited" for subjects who did not participate in the study at school age, but were later interviewed in the age-21 followup.
 
 \subsubsection{ABC}
 
